--- a/Frontend/restaurant-frontend/package.json
+++ b/Frontend/restaurant-frontend/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.7.7",
     "cookie": "^1.0.1",
     "js-cookie": "^3.0.5",
-    "next": "14.2.15",
+    "next": "^14.2.16",
     "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18"
