--- a/Frontend/restaurant-frontend/package.json
+++ b/Frontend/restaurant-frontend/package.json
@@ -12,10 +12,13 @@
     "axios": "^1.7.7",
     "cookie": "^1.0.1",
     "js-cookie": "^3.0.5",
-    "next": "^14.2.16",
+    "next": "^15.0.1",
     "node-fetch": "^3.3.2",
+    "qrcode.react": "^4.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
